# Techical_Test

./: CMakeLists.txt  README.md  fetchUbuntuImage.cpp  main.cpp
src/: .fetchUbuntuImage.cpp.swp  CMakeLists.txt  fetchUbuntuImage.cpp  fetchUbuntuImage.h  main.cpp
